@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-tv/xbmc/ChangeLog,v 1.26 2009/09/05 15:05:52 vapier Exp $
 
+  29 Jun 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
+  xbmc-12.3-r1.ebuild, xbmc-13.0_p2-r1.ebuild:
+  Fix USE dependency on media-libs/libsdl, "audio" USE flag was renamed to
+  "sound".
+
 *xbmc-13.0_p2-r1 (12 May 2014)
 
   12 May 2014; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
